--- a/Notebooks/Parte4_Ejers/Parte4_Ejercicios_Python_Basico_3_AYMC.ipynb
+++ b/Notebooks/Parte4_Ejers/Parte4_Ejercicios_Python_Basico_3_AYMC.ipynb
@@ -1,1 +1,306 @@
-{"cells":[{"cell_type":"markdown","metadata":{"id":"6LIfXTJJX_j9"},"source":["![TheBridge_logo_RGB_color.jpg](attachment:TheBridge_logo_RGB_color.jpg)"]},{"cell_type":"markdown","metadata":{"id":"q-SHYT1DX_j-"},"source":["![imagen](./img/ejercicios.png)"]},{"cell_type":"markdown","metadata":{"id":"a6honsT5X_j_"},"source":["## EJERCICIOS PYTHON BASICO 3:\n","## Operaciones matemáticas, comparación y booleanas"]},{"cell_type":"markdown","metadata":{"id":"m6YKgvhmX_j_"},"source":["Completa los siguiente ejercicios, la solución completa a los mismos se publicarán en el repo del curso a lo largo del sprint. En algunos ejercicios se muestra la solución final, para que puedas comprobar que lo has hecho bien, pero lo importante es el código que generes. ¡Vaaamos, a ello...!"]},{"cell_type":"markdown","metadata":{"id":"ef_jLHfWX_j_"},"source":["![ejercicio.png](./img/ejercicio.png)\n","\n","\n","## Ejercicio 1\n","Tenemos las siguientes variables:\n","\n","```Python\n","A = 4\n","B = \"Text\"\n","C = 4.1\n","```\n","\n","Comprueba:\n","1. Si A y B son equivalentes\n","2. Si A y C NO son equivalentes\n","3. Si A es mayor que C\n","4. Si C es menor o igual que A\n","5. Si B NO es equivalente a C"]},{"cell_type":"code","source":["A = 4\n","B = \"Text\"\n","C = 4.1\n","\n","print(A == B)\n","print(A != C)\n","print(A > C)\n","print(C <= A)\n","print(B != C)"],"metadata":{"colab":{"base_uri":"https://localhost:8080/"},"id":"tykzYpa6YTyg","executionInfo":{"status":"ok","timestamp":1745323475079,"user_tz":-120,"elapsed":10,"user":{"displayName":"Aldair MC","userId":"02356791645566482161"}},"outputId":"be0fa79e-a617-427e-aa6e-69c0121cba01"},"execution_count":4,"outputs":[{"output_type":"stream","name":"stdout","text":["False\n","True\n","False\n","False\n","True\n"]}]},{"cell_type":"code","execution_count":null,"metadata":{"id":"zXt5O-DmX_kA","outputId":"61e915c8-c610-4812-bfff-5767c719d035"},"outputs":[{"name":"stdout","output_type":"stream","text":["False\n","True\n","False\n","False\n","True\n"]}],"source":[]},{"cell_type":"markdown","metadata":{"id":"UcRIS7ZRX_kA"},"source":["![ejercicio.png](./img/ejercicio.png)\n","\n","## Ejercicio 2\n","Crea un programa donde se recojan dos inputs del usuario, y el output del programa sea si esos inputs son iguales o no"]},{"cell_type":"code","execution_count":5,"metadata":{"id":"Ds9ABdlOX_kA","colab":{"base_uri":"https://localhost:8080/"},"executionInfo":{"status":"ok","timestamp":1745323498739,"user_tz":-120,"elapsed":2064,"user":{"displayName":"Aldair MC","userId":"02356791645566482161"}},"outputId":"cf864f80-35c2-4004-de0e-96591f37d77d"},"outputs":[{"output_type":"stream","name":"stdout","text":["Introduce el primer input: a\n","Introduce el segundo input: 1\n","False\n"]}],"source":["input1 = input(\"Introduce el primer input: \")\n","input2 = input(\"Introduce el segundo input: \")\n","\n","print(input1 == input2)"]},{"cell_type":"markdown","metadata":{"id":"92dYC7WkX_kA"},"source":["![ejercicio.png](./img/ejercicio.png)\n","\n","## Ejercicio 3\n","Mismo programa que en 2, pero en esta ocasión tienen que ser tres inputs y dos salidas. Una de las salidas que nos indique si todos son iguales, y la otra si al menos dos inputs sí que lo son"]},{"cell_type":"code","source":["input1 = input(\"Introduce el primer input: \")\n","input2 = input(\"Introduce el segundo input: \")\n","input3 = input(\"Introduce el tercer input: \")\n","\n","print(input1 == input2 == input3)\n","print(input1 == input2 or input1 == input3 or input2 == input3)"],"metadata":{"colab":{"base_uri":"https://localhost:8080/"},"id":"a8E5iHfDYyqa","executionInfo":{"status":"ok","timestamp":1745323819673,"user_tz":-120,"elapsed":3697,"user":{"displayName":"Aldair MC","userId":"02356791645566482161"}},"outputId":"62049044-9b61-49f5-a986-8a13428b1afe"},"execution_count":6,"outputs":[{"output_type":"stream","name":"stdout","text":["Introduce el primer input: 1\n","Introduce el segundo input: 2\n","Introduce el tercer input: 3\n","False\n","False\n"]}]},{"cell_type":"code","execution_count":null,"metadata":{"id":"wsQq6ocTX_kB","outputId":"a812926f-270a-44eb-dc8d-01a27e381472"},"outputs":[{"name":"stdout","output_type":"stream","text":["Todos son iguales: False\n","Todos son iguales: False\n"]}],"source":[]},{"cell_type":"markdown","metadata":{"id":"PMT-FutYX_kB"},"source":["![ejercicio.png](./img/ejercicio.png)\n","\n","## Ejercicio 4\n","Razona sin ejecutar código el output que obtendremos de las siguientes sentencias\n","1. True and True and False\n","2. not ((True or False) and (True or False))\n","3. (False or False or False or True) and False\n","4. not False and True and not True"]},{"cell_type":"markdown","metadata":{"id":"KFrqJxqfX_kB"},"source":["1. False\n","2. False\n","3. False\n","4. False"]}],"metadata":{"kernelspec":{"display_name":"Curso_Online_DATA","language":"python","name":"python3"},"language_info":{"codemirror_mode":{"name":"ipython","version":3},"file_extension":".py","mimetype":"text/x-python","name":"python","nbconvert_exporter":"python","pygments_lexer":"ipython3","version":"3.11.5"},"orig_nbformat":4,"colab":{"provenance":[{"file_id":"1Z5Y2lqKV2M3XhpKfkn5-oa-3FG4KHaZy","timestamp":1745323294696}]}},"nbformat":4,"nbformat_minor":0}
+{
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "q-SHYT1DX_j-"
+   },
+   "source": [
+    "![imagen](./img/ejercicios.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "a6honsT5X_j_"
+   },
+   "source": [
+    "## EJERCICIOS PYTHON BASICO 3:\n",
+    "## Operaciones matemáticas, comparación y booleanas"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "m6YKgvhmX_j_"
+   },
+   "source": [
+    "Completa los siguiente ejercicios, la solución completa a los mismos se publicarán en el repo del curso a lo largo del sprint. En algunos ejercicios se muestra la solución final, para que puedas comprobar que lo has hecho bien, pero lo importante es el código que generes. ¡Vaaamos, a ello...!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "ef_jLHfWX_j_"
+   },
+   "source": [
+    "![ejercicio.png](./img/ejercicio.png)\n",
+    "\n",
+    "\n",
+    "## Ejercicio 1\n",
+    "Tenemos las siguientes variables:\n",
+    "\n",
+    "```Python\n",
+    "A = 4\n",
+    "B = \"Text\"\n",
+    "C = 4.1\n",
+    "```\n",
+    "\n",
+    "Comprueba:\n",
+    "1. Si A y B son equivalentes\n",
+    "2. Si A y C NO son equivalentes\n",
+    "3. Si A es mayor que C\n",
+    "4. Si C es menor o igual que A\n",
+    "5. Si B NO es equivalente a C"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 10,
+     "status": "ok",
+     "timestamp": 1745323475079,
+     "user": {
+      "displayName": "Aldair MC",
+      "userId": "02356791645566482161"
+     },
+     "user_tz": -120
+    },
+    "id": "tykzYpa6YTyg",
+    "outputId": "be0fa79e-a617-427e-aa6e-69c0121cba01"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n",
+      "False\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = 4\n",
+    "B = \"Text\"\n",
+    "C = 4.1\n",
+    "\n",
+    "print(A == B)\n",
+    "print(A != C)\n",
+    "print(A > C)\n",
+    "print(C <= A)\n",
+    "print(B != C)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "zXt5O-DmX_kA",
+    "outputId": "61e915c8-c610-4812-bfff-5767c719d035"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "True\n",
+      "False\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "UcRIS7ZRX_kA"
+   },
+   "source": [
+    "![ejercicio.png](./img/ejercicio.png)\n",
+    "\n",
+    "## Ejercicio 2\n",
+    "Crea un programa donde se recojan dos inputs del usuario, y el output del programa sea si esos inputs son iguales o no"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 2064,
+     "status": "ok",
+     "timestamp": 1745323498739,
+     "user": {
+      "displayName": "Aldair MC",
+      "userId": "02356791645566482161"
+     },
+     "user_tz": -120
+    },
+    "id": "Ds9ABdlOX_kA",
+    "outputId": "cf864f80-35c2-4004-de0e-96591f37d77d"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Introduce el primer input: a\n",
+      "Introduce el segundo input: 1\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "input1 = input(\"Introduce el primer input: \")\n",
+    "input2 = input(\"Introduce el segundo input: \")\n",
+    "\n",
+    "print(input1 == input2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "92dYC7WkX_kA"
+   },
+   "source": [
+    "![ejercicio.png](./img/ejercicio.png)\n",
+    "\n",
+    "## Ejercicio 3\n",
+    "Mismo programa que en 2, pero en esta ocasión tienen que ser tres inputs y dos salidas. Una de las salidas que nos indique si todos son iguales, y la otra si al menos dos inputs sí que lo son"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "colab": {
+     "base_uri": "https://localhost:8080/"
+    },
+    "executionInfo": {
+     "elapsed": 3697,
+     "status": "ok",
+     "timestamp": 1745323819673,
+     "user": {
+      "displayName": "Aldair MC",
+      "userId": "02356791645566482161"
+     },
+     "user_tz": -120
+    },
+    "id": "a8E5iHfDYyqa",
+    "outputId": "62049044-9b61-49f5-a986-8a13428b1afe"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Introduce el primer input: 1\n",
+      "Introduce el segundo input: 2\n",
+      "Introduce el tercer input: 3\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "input1 = input(\"Introduce el primer input: \")\n",
+    "input2 = input(\"Introduce el segundo input: \")\n",
+    "input3 = input(\"Introduce el tercer input: \")\n",
+    "\n",
+    "print(input1 == input2 == input3)\n",
+    "print(input1 == input2 or input1 == input3 or input2 == input3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "wsQq6ocTX_kB",
+    "outputId": "a812926f-270a-44eb-dc8d-01a27e381472"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Todos son iguales: False\n",
+      "Todos son iguales: False\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "PMT-FutYX_kB"
+   },
+   "source": [
+    "![ejercicio.png](./img/ejercicio.png)\n",
+    "\n",
+    "## Ejercicio 4\n",
+    "Razona sin ejecutar código el output que obtendremos de las siguientes sentencias\n",
+    "1. True and True and False\n",
+    "2. not ((True or False) and (True or False))\n",
+    "3. (False or False or False or True) and False\n",
+    "4. not False and True and not True"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "KFrqJxqfX_kB"
+   },
+   "source": [
+    "1. False\n",
+    "2. False\n",
+    "3. False\n",
+    "4. False"
+   ]
+  }
+ ],
+ "metadata": {
+  "colab": {
+   "provenance": [
+    {
+     "file_id": "1Z5Y2lqKV2M3XhpKfkn5-oa-3FG4KHaZy",
+     "timestamp": 1745323294696
+    }
+   ]
+  },
+  "kernelspec": {
+   "display_name": "Curso_Online_DATA",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.5"
+  },
+  "orig_nbformat": 4
+ },
+ "nbformat": 4,
+ "nbformat_minor": 0
+}
