--- a/Notebooks/Parte4_Ejers/Parte4_Ejercicios_Python_Basico_4_AYMC.ipynb
+++ b/Notebooks/Parte4_Ejers/Parte4_Ejercicios_Python_Basico_4_AYMC.ipynb
@@ -3,15 +3,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "zLa3CQNtaccw"
-   },
-   "source": [
-    "![imagen](./img/ejercicios.png)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
     "id": "3Rs1pc_faccw"
    },
    "source": [
@@ -34,10 +25,9 @@
     "id": "XtqgD8fDaccx"
    },
    "source": [
-    "![ejercicio.png](./img/ejercicio.png)\n",
     "\n",
     "## Ejercicio 1\n",
-    "Para este ejercicio vamos a poner en práctica [las funciones built in](https://docs.python.org/3/library/functions.html).\n",
+    "Para este ejercicio vamos a poner en práctica lo aprendido.\n",
     "\n",
     "1. Calcula el máximo de la lista: [4, 6, 8, -1]\n",
     "2. Suma todos los elementos de la lista anterior\n",
@@ -66,7 +56,6 @@
     "id": "UyAd93gOaccx"
    },
    "source": [
-    "![ejercicio.png](./img/ejercicio.png)\n",
     "\n",
     "## Ejercicio 2\n",
     "Para el siguiente string se pide imprimir por pantalla los siguientes casos\n",
@@ -128,7 +117,6 @@
     "id": "-IplJCNcaccy"
    },
    "source": [
-    "![ejercicio.png](./img/ejercicio.png)\n",
     "\n",
     "## Ejercicio 3\n",
     "1. Crea una lista con 3 elementos numéricos\n",
