upgraded_ejers_adicionales

--- a/MODULO 0/EJERS_ADICIONALES/EJERS_ADICIONALES.ipynb
+++ b/MODULO 0/EJERS_ADICIONALES/EJERS_ADICIONALES.ipynb
@@ -5,7 +5,7 @@
    "id": "5b0775ba",
    "metadata": {},
    "source": [
-    "65º Diseña un programa que, dado un número entero, determine si éste es el doble de un número impar. (Ejemplo: 14 es el doble de 7, que es impar.)"
+    "65º Diseña un programa que, dado un número entero, determine si éste es el doble de un número impar. (Ejemplo: 14 es el doble de 7, que es impar)."
    ]
   },
   {
@@ -67,7 +67,7 @@
    "metadata": {},
    "source": [
     "68º Realiza un programa que calcule el desglose en billetes y monedas de una cantidad exacta de euros. Hay billetes de\n",
-    "500, 200, 100, 50, 20, 10 y 5$ y monedas de 2 y 1$.\n",
+    "500, 200, 100, 50, 20, 10 y 5 y monedas de 2 y 1$.\n",
     "\n",
     "Por ejemplo, si deseamos conocer el desglose de 434$, el programa mostrará por pantalla el siguiente resultado:\n",
     " \n",
@@ -110,7 +110,7 @@
    "source": [
     "82º Diseña un programa que calcule la menor de cinco palabras dadas; es decir, la primera palabra de las cinco en orden alfabético. \n",
     "\n",
-    "No aceptaremos que las mayúsculas sean **alfabéticamente✮✮ menores que las minúsculas. O sea, ’pepita’ es menor que ’Pepito’"
+    "No aceptaremos que las mayúsculas sean **alfabéticamente** menores que las minúsculas. O sea, ’pepita’ es menor que ’Pepito’"
    ]
   },
   {
@@ -135,7 +135,7 @@
    "source": [
     "83º Diseña un programa que, dados cinco números enteros, determine cuál de los cuatro últimos números es más cercano al primero. \n",
     "\n",
-    "(Por ejemplo, si el usuario introduce los números 2, 6, 4, 1 y 10, el programa responderá que el número más cercano al 2 es el 1.)"
+    "(Por ejemplo, si el usuario introduce los números 2, 6, 4, 1 y 10, el programa responderá que el número más cercano al 2 es el 1)."
    ]
   },
   {
@@ -166,7 +166,7 @@
    "id": "9a5aec53",
    "metadata": {},
    "source": [
-    "104º Implementa un programa que muestre todos los múltiplos de n entre n y m ·n, ambos inclusive, donde n y m son números introducidos por el usuario"
+    "104º Implementa un programa que muestre todos los múltiplos de n entre n y m ·n, ambos inclusive, donde n y m son números introducidos por el usuario."
    ]
   },
   {
@@ -193,7 +193,7 @@
     "\n",
     "Por ejemplo, **amor**, **chino** e **himno** son palabras **alfabéticas**. \n",
     "\n",
-    "Diseña un programa que lea una palabra y nos diga si es alfabética o no\n"
+    "Diseña un programa que lea una palabra y nos diga si es alfabética o no.\n"
    ]
   },
   {
@@ -248,10 +248,14 @@
    "metadata": {},
    "source": [
     "270º La última letra del DNI puede calcularse a partir del número. Para ello sólo tienes que dividir el número por 23 y\n",
+    "\n",
     "quedarte con el resto, que es un número entre 0 y 22. La letra que corresponde a cada número la tienes en esta tabla:\n",
+    "\n",
     "0 1 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21 22\n",
+    "\n",
     "T R W A G M Y F P D X B N J Z S Q V H L C K E\n",
-    "Define una función que, dado un número de DNI, devuelva la letra que le corresponde"
+    "\n",
+    "Define una función que, dado un número de DNI, devuelva la letra que le corresponda."
    ]
   },
   {
@@ -289,7 +293,7 @@
     "\n",
     "272º Diseña una función llamada es_repeticion que reciba una cadena y nos diga si la cadena está formada mediante la concatenación de una cadena consigo misma. \n",
     "\n",
-    "Por ejemplo, es_repeticion(’abab’) devolverá \"True\", pues la cadena ’abab’ está formada con la cadena ’ab’ repetida; por contra es_repeticion(’ababab’) devolverá \"False\""
+    "Por ejemplo, es_repeticion(’abab’) devolverá \"True\", pues la cadena ’abab’ está formada con la cadena ’ab’ repetida; por contra es_repeticion(’ababab’) devolverá \"False\"."
    ]
   },
   {
@@ -317,7 +321,7 @@
     "\n",
     "por 100, así que es bisiesto. El año 1900 es divisible por 4, pero no es bisiesto porque es divisible por 100 y no por 400. El año 2000 sí es bisiesto: el número 2000 es divisible por 4 y, \n",
     "\n",
-    "aunque es divisible por 100, también lo es por 400.)"
+    "aunque es divisible por 100, también lo es por 400)."
    ]
   },
   {
@@ -363,7 +367,7 @@
     "\n",
     "La función devolverá True si la letra corresponde a ese número de DNI, y False en caso contrario. La función debe llamarse comprueba_letra_dni .\n",
     "\n",
-    "Si lo deseas, puedes llamar a la función letra_dni , desarrollada en el ejercicio 270, desde esta nueva función "
+    "Si lo deseas, puedes llamar a la función letra_dni , desarrollada en el ejercicio 270, desde esta nueva función."
    ]
   },
   {
